--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@ Docker images used when running benchmarks are available at: \\
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
 \usepackage{tikz}
-\usetikzlibrary{positioning,calc,through}
+\usetikzlibrary{positioning,calc,through,fpu}
 
 
 % llt: Define a global style for URLs, rather that the default one
